perl (5.20.0-5) UNRELEASED; urgency=medium

  * Fix visible escape sequences in perldoc output by passing the "-R"
    option to the "less" pager. (Closes: #758689)
  * Pass explicit LD settings through to subdirectories again even if
    the build system sets LD. (Closes: #758471)

 -- Niko Tyni <ntyni@debian.org>  Sat, 23 Aug 2014 19:21:42 -0700

perl (5.20.0-4) unstable; urgency=medium

  * Drop the -exp1 suffix from perlapi-5.20.0: no further changes
    to @INC are planned in this cycle.
  * Build-depend on libc6-dev (>= 2.19-9) on s390x to make sure we
    build against the "new" reverted jmp_buf ABI. (Closes: #753444)
  * Upload to unstable.

 -- Niko Tyni <ntyni@debian.org>  Thu, 14 Aug 2014 21:47:11 +0300

perl (5.20.0-3) experimental; urgency=medium

  * Disable the gcc -ftree-vrp optimization of regcomp.c on mips and
    mipsel to work around a possible gcc-4.9 bug.
    Thanks to Aurelien Jarno. (Closes: #754054)

 -- Niko Tyni <ntyni@debian.org>  Fri, 08 Aug 2014 10:16:53 +0300

perl (5.20.0-2) experimental; urgency=medium

  * Adjust the Breaks versions of libalien-wxwidgets-perl, libjcode-perl, and
    libanyevent-perl now that fixed versions are in the archive. (See #750017)
  * Break older versions of libgtk2-perl-doc, which installed documentation
    in /usr/lib/perl5.
  * update maintainer tests in debian/t/control.t to accommodate added
    digits in libmodule-corelist-perl versioning

 -- Niko Tyni <ntyni@debian.org>  Thu, 07 Aug 2014 13:55:42 +0300

perl (5.20.0-1) experimental; urgency=low

  * New upstream release.
  * Move @INC to multiarch enabled paths. (See #748380)
    + provide perlapi-5.20.0-exp1 for now (and set $Config{debian_abi}
      accordingly), because @INC might still change.
    + break libalien-wxwidgets-perl, libjcode-perl, and libanyevent-perl,
      which use /usr/lib/perl5 without a dependency on perlapi-* or the
      current perl version.
  * debian/rules: clean: no need to remove DB_File .bak files anymore.