@@ -1,5 +1,0 @@
-The CGI::Fast module is distributed and built with perl, although as
-it requires the FCGI module (not part of perl) to work it has been
-split into a separate package.
-
- -- Brendan O'Dea <bod@debian.org>, Fri, 26 Jan 2001 20:03:51 +1100
