@@ -1,3 +1,0 @@
-debian/libcgi-fast-perl.README.Debian	libcgi-fast-perl/README.Debian
-debian/changelog			libcgi-fast-perl/changelog.Debian
-debian/copyright			libcgi-fast-perl/copyright
