@@ -1,2 +1,0 @@
-usr/share/man/man3/CGI::Fast.3perl
-usr/share/perl/*/CGI/Fast.pm
