@@ -1,2 +1,0 @@
-# Taken from an upstream text
-spelling-error-in-copyright explicitely explicitly
